<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <item
        android:id="@+id/menu_main_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:orderInCategory="100"
        android:visible="false"
        app:iconTint="@android:color/white"
        app:showAsAction="always"
        android:title="@string/delete" />
    <item
        android:id="@+id/menu_main_about"
        android:icon="@drawable/ic_share_black_24dp"
        android:orderInCategory="100"
        app:iconTint="@android:color/white"
        app:showAsAction="never"
        android:title="@string/about" />
    <item
        android:id="@+id/menu_main_share"
        android:icon="@drawable/ic_share_black_24dp"
        android:orderInCategory="100"
        app:iconTint="@android:color/white"
        app:showAsAction="never"
        android:title="@string/shareapp" />
    <item
        android:id="@+id/menu_main_translate"
        android:icon="@drawable/ic_share_black_24dp"
        android:orderInCategory="100"
        app:iconTint="@android:color/white"
        app:showAsAction="never"
        android:title="@string/translate" />
</menu>