<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backgroundcolor"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        />
    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/background_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_gravity="top"
        app:np_width="180dp"
        app:np_dividerDistance="110dp"
        app:np_height="60dp"
        app:np_dividerColor="@color/colorPrimary"
        app:np_wrapSelectorWheel="false"
        app:np_orientation="horizontal"
        app:np_selectedTextColor="@color/colorPrimary"
        app:np_textColor="@color/colorPrimary"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/background_expandview"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:text="@string/change"
            android:layout_marginBottom="20dp"

            android:id="@+id/selectColor"
            />

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wordcolor"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        />
    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/word_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_gravity="top"
        app:np_width="180dp"
        app:np_dividerDistance="110dp"
        app:np_height="60dp"
        app:np_dividerColor="@color/colorPrimary"
        app:np_wrapSelectorWheel="false"
        app:np_orientation="horizontal"
        app:np_selectedTextColor="@color/colorPrimary"
        app:np_textColor="@color/colorPrimary"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/word_expandview"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:text="@string/change"

            android:id="@+id/selectColorWord1"
            android:layout_marginEnd="10dp"
            />
        <ImageView
            android:id="@+id/arrow_right"
            android:layout_width="wrap_content"
            android:tint="@android:color/darker_gray"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:src="@drawable/cpv_ic_arrow_right_black_24dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00ff00"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/white"
            android:text="@string/change"
            android:id="@+id/selectColorWord2"
            />
    </LinearLayout>


</LinearLayout>